--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   pull_to_refresh: ^2.0.0 # 添加这一行
   easy_refresh: ^3.4.0 #下拉、上拉加载刷新
+  shared_preferences: ^2.2.2
+  provider: ^6.0.5
 
 
 dev_dependencies:
